# fornax-data

./: pyproject.toml  setup.py
fornax_data.egg-info/: PKG-INFO  SOURCES.txt
src/learn/: fornax.py  test.py
