[project]
name = "fornax-data"
version = "0.0.1"
authors = [
  { name="Freteq", email="liton.developers@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MgrFretka"
"Bug Tracker" = "https://github.com/MgrFretka/fornax-data"